--- a/index.html
+++ b/index.html
@@ -49,13 +49,18 @@
                         <h4>BEN BOROVINSKY</h4>
                         <p>USC, MS '20<br>USC, BS '19</p>
                         <div class="pers-container">
-                            <a class="pers-btn" href="assets/pdf/Resume_Ben_Borovinsky.pdf" target="_blank" title="Resume"><img src="assets/svg/glyphs/resume_glyph.svg"></a>
-                            <a class="pers-btn" href="http://borovinsky.com" target="_self" title="Website"><img src="assets/svg/glyphs/website_glyph.svg"></a>
-                            <a class="pers-btn" href="https://hackertyper.net/" target="_blank" title="Fun Link"><img src="assets/svg/glyphs/code_glyph.svg"></a>
+                            <a class="pers-btn" href="assets/pdf/Resume_Ben_Borovinsky.pdf" target="_blank" title="Resume"><img src="assets/img/Resume_Ben_Borovinsky.png">
+                            <span>Resume</span>
+                            </a>
+                            <!-- <a class="pers-btn" href="http://borovinsky.com" target="_self" title="Website"><img src="assets/svg/glyphs/website_glyph.svg"></a> -->
+                            <!-- <a class="pers-btn" href="https://hackertyper.net/" target="_blank" title="Fun Link"><img src="assets/svg/glyphs/code_glyph.svg"></a> -->
                         </div>
-                        <div class="passion">
+                        <!-- <div class="passion">
                             <p>Ask Me About...</p>
                             <div class="tags">
+                                <span class="tag sports-tag">MLB</span>
+                                <span class="tag sports-tag">College Football</span>
+                                <span class="tag break-tag"></span>
                                 <span class="tag sports-tag">College Football</span>
                                 <span class="tag sports-tag">College Basketball</span>
                                 <span class="tag break-tag"></span>
@@ -76,11 +81,24 @@
                                 <span class="tag activity-tag">Running</span>
                                 <span class="tag activity-tag">Skateboarding</span>
                             </div>
-                        </div>
+                        </div> -->
                     </div>
                     <div class="bio">
-                        <p>In short, I am an engineer who is the product of numbers and sports. I graduated in 2020 with a master’s degree in
-                            Financial Engineering from the University of Southern California, where I previously earned a bachelor’s in
+                        <div class="passion">
+                            <p>Ask Me About...</p>
+                            <div class="tags">
+                                <span class="tag sports-tag">MLB</span>
+                                <span class="tag sports-tag">College Football</span>
+                                <span class="tag culture-tag">Star Wars</span>
+                                <span class="tag culture-tag">Memes</span>
+                                <span class="tag nerd-tag">Analytics</span>
+                                <span class="tag nerd-tag">Finance</span>
+                                <span class="tag nerd-tag">Engineering</span>
+                                <span class="tag activity-tag">Running</span>
+                            </div>
+                        </div>
+                        <p>In short, I am an engineer who is the product of numbers and sports. I graduated in 2020 with a master's degree in
+                            Financial Engineering from the University of Southern California, where I previously earned a bachelor's in
                             Mechanical Engineering and a minor in Sports Media Studies. As you can probably guess, my degrees only tell part of
                             the story.
                         </p>
@@ -92,7 +110,7 @@
                             southpaw who had tremendous respect for the game. While I continued playing first base and hitting somewhere between
                             seventh and thirteenth in the lineup, I began collecting baseball cards. Over the years, I had accrued more than two
                             full binders of cards separated by league and organized by team and last name. This library of past and present
-                            baseball sparked my obsession with the sport. Throughout middle school, I would watch MLB Network’s recap show
+                            baseball sparked my obsession with the sport. Throughout middle school, I would watch MLB Network's recap show
                             <em>Quick Pitch</em> every morning and all-time ranking show <em>Prime 9</em> in the afternoon. My baseball trivia
                             knowledge was growing, for I was addicted to the sport.
                         </p>
@@ -110,9 +128,9 @@
                         </p>
                         <p>I took my talents to Los Angeles to study engineering and become captivated by the world of college football. I
                             followed this new passion by working for the USC Sports Information Office. Here I learned more about USC sports and
-                            provided data analytics assistance, most notably at Men’s Basketball and Women’s Beach Volleyball games. After
+                            provided data analytics assistance, most notably at Men's Basketball and Women's Beach Volleyball games. After
                             pulling all-nighters every week during my junior year, I realized I wanted to continue being a student at USC. This
-                            led me to pursue a master’s in financial engineering, where I applied my mathematical knowledge and analytics
+                            led me to pursue a master's in financial engineering, where I applied my mathematical knowledge and analytics
                             background from mechanical engineering to the world of finance. At the same time, I worked on the recruiting side of
                             USC Football and further expanded my knowledge of analytics while also providing impactful work for the department.
                         </p>
