--- a/index.html
+++ b/index.html
@@ -336,6 +336,19 @@
                                 </div>
                             </div>
                         </a>
+                        <a class="projects-item" href="star_spangler_bannon.html" target="_blank">
+                            <div class="thumbnail">
+                                <img src="assets/img/projects/ssb_taylor.jpg" id="cover">
+                            </div>
+                            <div class="description">
+                                <div class="title">
+                                    Harmonizing Tradition: A Data-Driven Observation of National Anthem Performances at the Super Bowl
+                                </div>
+                                <div class="date">
+                                    February 10, 2024
+                                </div>
+                            </div>
+                        </a>
                         <!--<div class="projects-item">
                             ITEM 2
                         </div> -->
