Commented out Willie shoutout, Facebook link, and Memes

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                                 <span class="tag sports-tag">MLB</span>
                                 <span class="tag sports-tag">College Football</span>
                                 <span class="tag culture-tag">Star Wars</span>
-                                <span class="tag culture-tag">Memes</span>
+                                <!-- <span class="tag culture-tag">Memes</span> -->
                                 <span class="tag nerd-tag">Analytics</span>
                                 <span class="tag nerd-tag">Finance</span>
                                 <span class="tag nerd-tag">Engineering</span>
@@ -565,9 +565,9 @@
             <h2>Connect</h2>
             <p><b>follow</b> me on social media<br><b>contact</b> me if you have any questions or comments</p>
             <div class="connect">
-                <a class="btn" id="facebook" href="https://www.facebook.com/ben.borovinsky" target="_blank" title="Facebook Link">
+                <!-- <a class="btn" id="facebook" href="https://www.facebook.com/ben.borovinsky" target="_blank" title="Facebook Link">
                     <img src="assets/svg/facebook_def.svg">
-                </a>
+                </a> -->
                 <a class="btn" id="linkedin" href="https://www.linkedin.com/in/benborovinsky/" target="_blank" title="LinkedIn Link">
                     <img src="assets/svg/linkedin_def.svg">
                 </a>
@@ -588,9 +588,9 @@
                     <img src="assets/svg/portrait_faceless.svg"/>
                     &copy; Ben Borovinsky | Fight On
                 </div>
-                <div class="willie">
+                <!-- <div class="willie">
                     Thanks to <a href="http://wilhelmwillie.com/" target="_blank">Willie</a> for website help!
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
