Changed email address to using [at] and [dot]

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                 <a class="btn" id="twitter" href="https://twitter.com/ben_borovinsky" target="_blank" title="Twitter Link">
                     <img src="assets/svg/twitter_def.svg">
                 </a>
-                <a class="btn" id="gmail" title="bmborovinsky@gmail.com">
+                <a class="btn" id="gmail" title="bmborovinsky[at]gmail[dot]com">
                     <img src="assets/svg/gmail_def.svg">
                 </a>
             </div>
