Added "Read more" to Personal section (kinda buggy)

--- a/index.html
+++ b/index.html
@@ -106,41 +106,47 @@
                             <hr>
                             <span></span>
                         </div> -->
-                        <p>My parents put me in Little League baseball when I was six years old. I began developing my talents as the scrawny
-                            southpaw who had tremendous respect for the game. While I continued playing first base and hitting somewhere between
-                            seventh and thirteenth in the lineup, I began collecting baseball cards. Over the years, I had accrued more than two
-                            full binders of cards separated by league and organized by team and last name. This library of past and present
-                            baseball sparked my obsession with the sport. Throughout middle school, I would watch MLB Network's recap show
-                            <em>Quick Pitch</em> every morning and all-time ranking show <em>Prime 9</em> in the afternoon. My baseball trivia
-                            knowledge was growing, for I was addicted to the sport.
-                        </p>
-                        <p>In 2008, I embarked on a journey that challenged me both mentally and physically: running the Los Angeles Marathon.
-                            As a sixth-grade student at the time, I would train after school and on weekends to prepare for the daunting 26.2
-                            miles. After putting in over 800 miles in eight months, I completed the LA Marathon on May 25, 2009. I apparently
-                            had such a fun time doing it that I trained and completed it again in 2010, the first year of the “Stadium to the
-                            Sea” route.
-                        </p>
-                        <p>I realized that being a high school first baseman was not my calling, so I tried out for the Dana Hills cross country
-                            team. I had to convert my marathon endurance to finishing three miles in under twenty minutes just to be on the
-                            team. After daily training over the summer, I made the team and continued to improve as a cross-country runner. I
-                            finally hit a personal best 17:19 for three miles as a sophomore and graduated with the third-best team in the
-                            nation.
-                        </p>
-                        <p>I took my talents to Los Angeles to study engineering and become captivated by the world of college football. I
-                            followed this new passion by working for the USC Sports Information Office. Here I learned more about USC sports and
-                            provided data analytics assistance, most notably at Men's Basketball and Women's Beach Volleyball games. After
-                            pulling all-nighters every week during my junior year, I realized I wanted to continue being a student at USC. This
-                            led me to pursue a master's in financial engineering, where I applied my mathematical knowledge and analytics
-                            background from mechanical engineering to the world of finance. At the same time, I worked on the recruiting side of
-                            USC Football and further expanded my knowledge of analytics while also providing impactful work for the department.
-                        </p>
-                        <!-- <div class="ornamental-rule">
-                            <hr>
-                            <span></span>
-                        </div> -->
-                        <p>To summarize, my education, work experience, and passions have contributed significantly to my personality and have
-                            developed me into a man with <b>strong character</b>, <b>obscure knowledge</b>, and a <b>growth mindset</b>.
-                        </p>
+                        <div id="mybox1id" style="display: none;"> 
+                            <p>My parents put me in Little League baseball when I was six years old. I began developing my talents as the scrawny
+                                southpaw who had tremendous respect for the game. While I continued playing first base and hitting somewhere between
+                                seventh and thirteenth in the lineup, I began collecting baseball cards. Over the years, I had accrued more than two
+                                full binders of cards separated by league and organized by team and last name. This library of past and present
+                                baseball sparked my obsession with the sport. Throughout middle school, I would watch MLB Network's recap show
+                                <em>Quick Pitch</em> every morning and all-time ranking show <em>Prime 9</em> in the afternoon. My baseball trivia
+                                knowledge was growing, for I was addicted to the sport.
+                            </p>
+                            <p>In 2008, I embarked on a journey that challenged me both mentally and physically: running the Los Angeles Marathon.
+                                As a sixth-grade student at the time, I would train after school and on weekends to prepare for the daunting 26.2
+                                miles. After putting in over 800 miles in eight months, I completed the LA Marathon on May 25, 2009. I apparently
+                                had such a fun time doing it that I trained and completed it again in 2010, the first year of the “Stadium to the
+                                Sea” route.
+                            </p>
+                            <p>I realized that being a high school first baseman was not my calling, so I tried out for the Dana Hills cross country
+                                team. I had to convert my marathon endurance to finishing three miles in under twenty minutes just to be on the
+                                team. After daily training over the summer, I made the team and continued to improve as a cross-country runner. I
+                                finally hit a personal best 17:19 for three miles as a sophomore and graduated with the third-best team in the
+                                nation.
+                            </p>
+                            <p>I took my talents to Los Angeles to study engineering and become captivated by the world of college football. I
+                                followed this new passion by working for the USC Sports Information Office. Here I learned more about USC sports and
+                                provided data analytics assistance, most notably at Men's Basketball and Women's Beach Volleyball games. After
+                                pulling all-nighters every week during my junior year, I realized I wanted to continue being a student at USC. This
+                                led me to pursue a master's in financial engineering, where I applied my mathematical knowledge and analytics
+                                background from mechanical engineering to the world of finance. At the same time, I worked on the recruiting side of
+                                USC Football and further expanded my knowledge of analytics while also providing impactful work for the department.
+                            </p>
+                            <!-- <div class="ornamental-rule">
+                                <hr>
+                                <span></span>
+                            </div> -->
+                            <p>To summarize, my education, work experience, and passions have contributed significantly to my personality and have
+                                developed me into a man with <b>strong character</b>, <b>obscure knowledge</b>, and a <b>growth mindset</b>.
+                            </p>
+                        </div>
+                        <button id="mybuttonid" 
+                                onclick="changeReadMore()"> 
+                            Read More 
+                        </button>
                     </div>
                 </div>
             </div>
