--- a/index.html
+++ b/index.html
@@ -581,9 +581,12 @@
                 <a class="btn" id="twitter" href="https://twitter.com/ben_borovinsky" target="_blank" title="Twitter Link">
                     <img src="assets/svg/twitter_def.svg">
                 </a>
-                <a class="btn" id="gmail" title="bmborovinsky[at]gmail[dot]com">
-                    <img src="assets/svg/gmail_def.svg">
+                <a class="btn" id="github" href="https://github.com/benboro" target="_blank" title="GitHub Link">
+                    <img src="assets/svg/github_def.svg">
                 </a>
+                <!-- <a class="btn" id="gmail" title="bmborovinsky[at]gmail[dot]com">
+                    <img src="assets/svg/gmail_def.svg">
+                </a> -->
             </div>
         </div>
     </div>
