Removed 'link' from button titles when hovering

--- a/index.html
+++ b/index.html
@@ -575,13 +575,13 @@
                 <!-- <a class="btn" id="facebook" href="https://www.facebook.com/ben.borovinsky" target="_blank" title="Facebook Link">
                     <img src="assets/svg/facebook_def.svg">
                 </a> -->
-                <a class="btn" id="linkedin" href="https://www.linkedin.com/in/benborovinsky/" target="_blank" title="LinkedIn Link">
+                <a class="btn" id="linkedin" href="https://www.linkedin.com/in/benborovinsky/" target="_blank" title="LinkedIn">
                     <img src="assets/svg/linkedin_def.svg">
                 </a>
-                <a class="btn" id="twitter" href="https://twitter.com/ben_borovinsky" target="_blank" title="Twitter Link">
+                <a class="btn" id="twitter" href="https://twitter.com/ben_borovinsky" target="_blank" title="Twitter">
                     <img src="assets/svg/twitter_def.svg">
                 </a>
-                <a class="btn" id="github" href="https://github.com/benboro" target="_blank" title="GitHub Link">
+                <a class="btn" id="github" href="https://github.com/benboro" target="_blank" title="GitHub">
                     <img src="assets/svg/github_def.svg">
                 </a>
                 <!-- <a class="btn" id="gmail" title="bmborovinsky[at]gmail[dot]com">
