Hid blog section from website

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="section-tab" data-class="work-experience">Work Experience
                     <li class="section-tab" data-class="projects">Projects
                     <!-- <li class="section-tab" data-class="extracurricular">Extracurricular -->
-                    <li class="section-tab" data-class="blog">Blog
+                    <!-- <li class="section-tab" data-class="blog">Blog -->
                 </ul>
             </div>
         </div>
@@ -368,7 +368,7 @@
                     show me when extracurricular clicked
                 </div>
             </div>
-
+<!-- 
             <div class="blog section">
                 <div class="text">
                     <div class="sec">
@@ -563,7 +563,7 @@
                         </a>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 
