--- a/ssb-player/index.html
+++ b/ssb-player/index.html
@@ -3,22 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Star Spangler Bannon</title>
+    <title>Star Spangled Banner Tracker</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <a href="http://borovinsky.com/" class="return-home-btn">Return to borovinsky.com</a>
 
     <!-- Setup Screen -->
     <div id="setup-screen" class="screen active">
-        <h1>Star Spangler Bannon</h1>
-        <p class="subtitle">National Anthem Karaoke Timer</p>
+        <h1 id="setup-title">Star Spangled Banner Tracker</h1>
+        <p class="subtitle">Created by Ben Borovinsky</p>
 
         <div class="control-group">
-            <label for="duration-slider">Duration: <span id="duration-display">120.5</span>s</label>
-            <input type="range" id="duration-slider" min="30" max="200" step="0.5" value="120.5">
+            <label for="duration-input" class="duration-label">
+                Duration (seconds):
+                <input type="number" id="duration-input" min="30" max="200" step="0.5" value="119.5" aria-label="Duration in seconds">
+            </label>
+            <div class="duration-control">
+                <input type="range" id="duration-slider" min="30" max="200" step="0.5" value="119.5">
+            </div>
         </div>
 
-        <div class="control-group">
+        <div class="control-group toggle-group">
             <label class="checkbox-label">
                 <input type="checkbox" id="bref-toggle">
                 Baseball Reference Mode
@@ -30,6 +36,9 @@
 
     <!-- Player Screen -->
     <div id="player-screen" class="screen">
+        <h1 id="player-title">Star Spangled Banner Tracker</h1>
+        <p id="player-hint" class="player-hint" hidden>Hint: Click a name to open their Baseball Reference page.</p>
+
         <div class="time-display">
             <span id="time-elapsed">0:00.0</span> / <span id="time-total">0:00.0</span>
         </div>
@@ -50,3 +59,4 @@
     <script src="player.js"></script>
 </body>
 </html>
+
